스코어 수정(2차 미완)

--- a/(J) map.html
+++ b/(J) map.html
@@ -11,6 +11,8 @@
     <script src="js/gameplay.js" type="module" defer></script>
     <script src="js/monsterMove.js" type="module" defer></script>
     <script src="js/kill.js" type="module" defer></script>
+    <script src="js/myscore.js" type="module" defer></script>
+    
 
 </head>
 <body>
@@ -19,8 +21,8 @@
              <!-- 상단 스코어 -->
              <div class="header">
                 <ul class="score">
-                    <li>My Score |</li>
-                    <li>Top Score |</li>
+                    <li >My Score | <span id="myscore"></span>.</li>
+                    <li>Top Score |  9999.</li>
                 </ul>
             </div>
 
@@ -43,17 +45,11 @@
 
                     <ul id="onthefloor" class="floor sec-floor" >
                         <li></li>
-                        <li></li>
-                        <li></li>
                     </ul>
                     <ul id="onthefloor" class="floor thir-floor">
                         <li></li>
-                        <li></li>
-                        <li></li>
                     </ul>
                     <ul id="onthefloor" class="floor four-floor">
-                        <li></li>
-                        <li></li>
                         <li></li>
                     </ul>   
                     <ul class="floor top-floor">
