--- a/gameplay.html
+++ b/gameplay.html
@@ -15,7 +15,7 @@
              <!-- 상단 스코어 -->
              <div class="header">
                 <ul class="score">
-                    <li>My Score |  .</li>
+                    <li >My Score | <span id="myscore"></span></li>
                     <li>Top Score |  9999.</li>
                 </ul>
             </div>
