--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="input-player">
                 <form action="gameover.html" method="post"> 
                     <input class="input1" type="text" placeholder="★닉네임을 입력해주세요★">
-                    <input class="input2" type="button">
+                    <button id="input2">등록</button>
                 </form>
             </div>
             <a class="start btn" href="selectLevel.html">
