닉네임 수정

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="input-player">
                 <form action="gameover.html" method="post"> 
-                    <input class="input1" type="text" placeholder="★닉네임을 입력해주세요★">
+                    <input class="input1" type="text" placeholder="★닉네임을 입력해주세요★" name="userId">
                     <button id="input2">등록</button>
                 </form>
             </div>
